5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1684_1101.log
== TEST (2019-04-27 00:02:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
	elif (opcao == "R") and (c > 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- ERROR:
File "XXXX", line 10
    elif (opcao == "R") and (c > 500) and (c > 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 00:03:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 00:04:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- EXECUTION TIME:
0.150589
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kwh e tipo R
valor total: R$, 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:53:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c < 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:54:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c < 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:55:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c < 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- EXECUTION TIME:
0.188286
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kwh e tipo R
Dados invalidos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 13:55:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- OUTPUT:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 13:56:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c =float(input("escreva o consumo em kwh: "))
opcao =input("qual o tipo de instalacao? (R/C/I): ")
print ("Entrada: ", c ,"kwh e tipo",opcao)
if (opcao == "R") and (c <= 500) and (c > 0):
	vr = (c * 0.44)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "R") and (c > 500) and (c > 0):
		vr = (c * 0.65)
		print ("valor total: R$,",round(vr, 2))
elif (opcao == "c") and (c <= 1000) and (c > 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "c") and (c < 1000) and (c <0):
	vr = (c * 0.60)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c <=5000) and (c < 0):
	vr = (c * 0.55)
	print ("valor total: R$",round(vr, 2))
elif (opcao == "I") and (c < 5000) and (c > 0):
	vr = (c * 0.60)
	print ("valor total: R$", round(vr, 2))
else:
	print ("Dados invalidos")
-- EXECUTION TIME:
0.158479
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada:  -56.0 kwh e tipo I
valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada:  955.5 kwh e tipo R
valor total: R$, 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
